# LinkHunterBot

./: .gitignore  .replit  LICENSE  README.md  account_routes.py  accounts_data.json  add_sample_msgs.py  app.py  async_helper.py  avalai_api.py  avalai_settings.json  bot.py  bulk_sms.py  dependencies.txt  get_messages.py  gitlab_setup.md  install.sh  link_manager.py  links_data.json  logger.py  main.py  notification_utils.py  perplexity_api.py  pyproject.toml  replit.nix  scheduler.py  send_message.py  test_avalai.py  test_telegram_links.html  troubleshooting_guide.md  updated_install.sh  user_accounts.py  web_crawler.py  web_scraper.py
attached_assets/: Pasted---1743629436086.txt
php_version/: README.md  composer.json  install.sh  migration_guide.md
php_version/public/: index.php
php_version/templates/: accounts.php  add_account_modal.php  avalai_settings.php  home.php  layout.php  telegram_desktop.php  verify_2fa.php  verify_code.php
static/: index.html  local_test.html
static/css/: custom.css
static/exports/: all_links_20250402_150700.xlsx  all_links_20250402_150707.xlsx  all_links_20250402_150709.xlsx  all_links_20250402_151927.xlsx  new_links_20250402_150712.xlsx  new_links_20250402_185048.xlsx
static/js/: app.js
templates/: 404.html  500.html  account_messages.html  accounts.html  avalai_settings.html  bulk_sms.html  category_keywords.html  channels.html  connection_logs.html  index.html  layout.html  links.html  logs.html  perplexity_settings.html  private_messages.html  settings.html  telegram_desktop.html  websites.html
(+11 files in other folders)
