[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.3",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot>=22.0",
    "requests>=2.32.3",
    "scheduler>=0.8.8",
    "selenium>=4.30.0",
    "telegram>=0.0.1",
    "telethon>=1.39.0",
    "tlgbotfwk>=0.4.61",
    "trafilatura>=2.0.0",
    "twilio>=9.5.1",
    "webdriver-manager>=4.0.2",
]
